display an inline list & spacing fixed

--- a/app/styles/components/custom.scss
+++ b/app/styles/components/custom.scss
@@ -106,3 +106,11 @@ a:hover {
     width: 500px;
   }
 }
+
+.no-margin{
+  margin: 0 !important;
+}
+
+.no-padding{
+  padding: 0 !important;
+}
